# Bagel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
assets/Models/: Light.gltf
assets/Models/Raw/: Light.blend  Light.blend1
assets/models/: cat.gltf
assets/models/AnotherMonkey/: AnotherMonkey.fbx  ThisMonkey.glb
assets/models/Monkey/: Monkey.fbx
assets/models/SurvivalBagpack/: Survival_BackPack_2.fbx
assets/models/ThisMonkey/: AnotherMonkey.fbx
assets/shaders/: 2DShader.fragment.glsl  2DShader.vertex.glsl
src/: Main.cpp
src/App/: Application.cpp  Application.hpp  Component.hpp  ComponentList.cpp  ComponentList.hpp  Layer.hpp  LayerList.cpp  LayerList.hpp  Object.hpp  ObjectList.cpp  ObjectList.hpp
src/Bagel/: Game.cpp  Game.hpp
src/Engine/: CameraController.cpp  CameraController.hpp  Material.cpp  Material.hpp  _GameApp.cpp
src/Events/: Events.hpp  InputEvents.hpp  WindowEvents.hpp
src/Game/: Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  Game.cpp  Game.hpp  Scene.hpp  _GameApp.cpp
src/Hooks/: Hooks.hpp
src/Include/: BagelApp.hpp  BagelEngine.hpp  BagelGame.hpp  BagelInput.hpp  BagelMath.hpp  BagelTools.hpp
src/Input/: CursorCodes.hpp  Input.hpp  InputCodes.hpp
src/Input/GLFW/: GLFW_Input.cpp
src/ObjectSystem/: Object.hpp
src/Renderer/: Buffer.cpp  Buffer.hpp  BufferLayout.cpp  BufferLayout.hpp  Camera.cpp  Camera.hpp  GLFunctions.cpp  RenderCommands.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  _Renderer.hpp
src/Renderer/Model/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp
src/Renderer/Model/glTFLoader(NOT_IN_USE)/: glTF.cpp
src/Renderer/Model/glTFLoader_NOT_IN_USE/: glTF.cpp  glTF.hpp
src/Tools/: Debug.hpp  Random.cpp  Random.hpp  Time.cpp  Time.hpp
src/Window/: Window.hpp  glfwWindow.cpp  glfwWinfow.hpp
src/_Bagel/: Game.cpp  Game.hpp
submodules/stb_image/: stb_image.hpp
